--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -36,12 +36,20 @@ body {
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: inherit;
   transition: 0.4s;
 }
 
+.fade-enter-active, .fade-leave-active{
+  transition: opacity 0.2s;
+}
+.fade-enter-from, .fade-leave-to{
+  opacity: 0;
+}
+
 @media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+  a:hover,
+  a:focus {
+    transform: scale(1.05);
   }
 }
