--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,8 +1,6 @@
-:root {
-  --primary-color: rgb(70, 86, 105);
-  --text-color: #444444;
-  --background-color: whitesmoke;
-}
+$primary-color: rgb(70, 86, 105);
+$text-color: #444444;
+$background-color: whitesmoke;
 
 *,
 *::before,
@@ -14,8 +12,8 @@
 
 body {
   min-height: 100vh;
-  color: var(--text-color);
-  background: var(--background-color);
+  color: $text-color;
+  background: $background-color;
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
@@ -24,13 +22,12 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-
-  font-weight: normal;
+  #app {
+    max-width: 1280px;
+    margin: 0 auto;
+    font-weight: normal;
+  }
 }
 
 a,
@@ -38,18 +35,19 @@ a,
   text-decoration: none;
   color: inherit;
   transition: 0.4s;
+
+  @media (hover: hover) {
+    &:hover,
+    &:focus {
+      transform: scale(1.05);
+    }
+  }
 }
 
-.fade-enter-active, .fade-leave-active{
+.fade-enter-active, .fade-leave-active {
   transition: opacity 0.2s;
 }
-.fade-enter-from, .fade-leave-to{
-  opacity: 0;
-}
 
-@media (hover: hover) {
-  a:hover,
-  a:focus {
-    transform: scale(1.05);
-  }
+.fade-enter-from, .fade-leave-to {
+  opacity: 0;
 }
